--- a/AppstoreReviews/Base.lproj/Main.storyboard
+++ b/AppstoreReviews/Base.lproj/Main.storyboard
@@ -672,20 +672,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Azk-8Z-Yg6">
+                            <scrollView autohidesScrollers="YES" horizontalLineScroll="82" horizontalPageScroll="10" verticalLineScroll="82" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Azk-8Z-Yg6">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <clipView key="contentView" id="Hjc-Hf-Qgr">
                                     <rect key="frame" x="1" y="17" width="238" height="117"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="eX8-pU-nlO" viewBased="YES" id="9mP-dQ-umL">
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="80" headerView="eX8-pU-nlO" viewBased="YES" id="9mP-dQ-umL">
                                             <rect key="frame" x="0.0" y="0.0" width="238" height="117"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="116" minWidth="40" maxWidth="1000" id="4UH-Ro-LmK">
+                                                <tableColumn width="600" minWidth="40" maxWidth="1000" id="4UH-Ro-LmK">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -698,21 +698,97 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView id="HgW-Bp-wm3">
-                                                            <rect key="frame" x="1" y="1" width="116" height="17"/>
+                                                        <tableCellView id="tQe-YB-VfM" customClass="ReviewCellView" customModule="AppstoreReviews" customModuleProvider="target">
+                                                            <rect key="frame" x="1" y="1" width="600" height="77"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="91f-hv-Usn">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="17"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="Dl5-7G-KXA">
+                                                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q2k-1j-0He">
+                                                                    <rect key="frame" x="10" y="17" width="50" height="50"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="50" id="Sz4-7n-wR0"/>
+                                                                        <constraint firstAttribute="height" constant="50" id="tfH-q3-YAX"/>
+                                                                    </constraints>
+                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="XEr-nP-1ca"/>
+                                                                </imageView>
+                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PEZ-r1-7hK">
+                                                                    <rect key="frame" x="10" y="0.0" width="50" height="17"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="46" id="3ie-9Y-Y6w"/>
+                                                                        <constraint firstAttribute="height" constant="17" id="Hod-fR-Ab6"/>
+                                                                    </constraints>
+                                                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="version" id="Jyi-bA-EZv">
+                                                                        <font key="font" metaFont="system"/>
+                                                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                    <connections>
+                                                                        <binding destination="tQe-YB-VfM" name="value" keyPath="objectValue.version" id="Ac4-wO-B4B"/>
+                                                                    </connections>
+                                                                </textField>
+                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Izq-Vw-AH7">
+                                                                    <rect key="frame" x="70" y="47" width="520" height="20"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="20" id="OuV-Ih-Vsm"/>
+                                                                    </constraints>
+                                                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Title" id="D96-Nc-Epk">
+                                                                        <font key="font" metaFont="system"/>
+                                                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                    <connections>
+                                                                        <binding destination="tQe-YB-VfM" name="value" keyPath="objectValue.title" id="L0O-rq-tr6"/>
+                                                                    </connections>
+                                                                </textField>
+                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Ad-j7-rMu">
+                                                                    <rect key="frame" x="70" y="30" width="520" height="17"/>
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Content" id="WVn-3m-Agh">
                                                                         <font key="font" metaFont="system"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
+                                                                    <connections>
+                                                                        <binding destination="tQe-YB-VfM" name="value" keyPath="objectValue.content" id="P9F-5G-HST">
+                                                                            <dictionary key="options">
+                                                                                <bool key="NSConditionallySetsEditable" value="YES"/>
+                                                                            </dictionary>
+                                                                        </binding>
+                                                                    </connections>
+                                                                </textField>
+                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qbv-zx-rM4">
+                                                                    <rect key="frame" x="70" y="10" width="520" height="20"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="20" id="R8E-xS-fiu"/>
+                                                                    </constraints>
+                                                                    <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="author" id="fVh-sC-1gh">
+                                                                        <font key="font" metaFont="miniSystem"/>
+                                                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                    <connections>
+                                                                        <binding destination="tQe-YB-VfM" name="value" keyPath="objectValue.author" id="cAE-6V-KmU"/>
+                                                                    </connections>
                                                                 </textField>
                                                             </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="Q2k-1j-0He" firstAttribute="top" secondItem="tQe-YB-VfM" secondAttribute="top" constant="10" id="23h-7X-qIN"/>
+                                                                <constraint firstItem="5Ad-j7-rMu" firstAttribute="top" secondItem="Izq-Vw-AH7" secondAttribute="bottom" id="4FC-A0-fCV"/>
+                                                                <constraint firstItem="Q2k-1j-0He" firstAttribute="centerX" secondItem="PEZ-r1-7hK" secondAttribute="centerX" id="6FP-Re-4YF"/>
+                                                                <constraint firstAttribute="trailing" secondItem="5Ad-j7-rMu" secondAttribute="trailing" constant="12" id="EXs-VH-KDB"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Izq-Vw-AH7" secondAttribute="trailing" constant="12" id="ItN-gb-YnO"/>
+                                                                <constraint firstItem="Izq-Vw-AH7" firstAttribute="top" secondItem="tQe-YB-VfM" secondAttribute="top" constant="10" id="Jcs-WN-pDT"/>
+                                                                <constraint firstAttribute="trailing" secondItem="qbv-zx-rM4" secondAttribute="trailing" constant="12" id="Lz5-NJ-aSN"/>
+                                                                <constraint firstItem="Izq-Vw-AH7" firstAttribute="leading" secondItem="Q2k-1j-0He" secondAttribute="trailing" constant="12" id="Qje-Oo-vy0"/>
+                                                                <constraint firstItem="PEZ-r1-7hK" firstAttribute="top" secondItem="Q2k-1j-0He" secondAttribute="bottom" id="WNx-hi-zYu"/>
+                                                                <constraint firstItem="qbv-zx-rM4" firstAttribute="leading" secondItem="Q2k-1j-0He" secondAttribute="trailing" constant="12" id="dTi-hj-6mU"/>
+                                                                <constraint firstAttribute="bottom" secondItem="qbv-zx-rM4" secondAttribute="bottom" constant="10" id="jGG-FF-966"/>
+                                                                <constraint firstItem="5Ad-j7-rMu" firstAttribute="leading" secondItem="Q2k-1j-0He" secondAttribute="trailing" constant="12" id="lLt-Db-gXn"/>
+                                                                <constraint firstItem="Q2k-1j-0He" firstAttribute="leading" secondItem="tQe-YB-VfM" secondAttribute="leading" constant="10" id="wkk-v3-0MS"/>
+                                                                <constraint firstItem="qbv-zx-rM4" firstAttribute="top" secondItem="5Ad-j7-rMu" secondAttribute="bottom" id="yai-Fx-ms5"/>
+                                                            </constraints>
                                                             <connections>
-                                                                <outlet property="textField" destination="91f-hv-Usn" id="FQ2-SO-sgg"/>
+                                                                <outlet property="detailTextField" destination="qbv-zx-rM4" id="YWV-K1-z8g"/>
+                                                                <outlet property="imageView" destination="Q2k-1j-0He" id="5ul-fo-lDj"/>
+                                                                <outlet property="textField" destination="5Ad-j7-rMu" id="Qfm-tJ-fcy"/>
                                                             </connections>
                                                         </tableCellView>
                                                     </prototypeCellViews>
@@ -726,7 +802,7 @@
                                     </subviews>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
-                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="Rcz-XI-thS">
+                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="Rcz-XI-thS">
                                     <rect key="frame" x="1" y="119" width="223" height="15"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
@@ -763,4 +839,7 @@
             <point key="canvasLocation" x="32" y="999"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="NSActionTemplate" width="14" height="14"/>
+    </resources>
 </document>
